parser/tests/bad/global_var.go
package main

var k = hey
